fixed the alignment of checkboxes going out of bounds

--- a/src/pages/resume.scss
+++ b/src/pages/resume.scss
@@ -97,7 +97,6 @@
             display: flex;
             align-items: center;
             gap: 2rem;
-            margin-left: -2.75rem;
             input {
                 margin-top: -1rem;
             }
